# egui-theme-switch

./: Cargo.toml  changelog.md
.forgejo/workflows/: ci.yml  demo.yml
.github/workflows/: ci.yml  demo.yml
demo/: Cargo.toml
demo/src/: main.rs
src/: arc.rs  cogwheel.rs  lib.rs  rotated_rect.rs  sun.rs
