[package]
name = "egui-theme-switch"
version = "0.5.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://codeberg.org/tautropfli/egui-theme-switch"
description = "A pretty theme switch for your egui app"
keywords = ["egui", "widget", "dark-light", "switch"]
categories = ["gui"]
exclude = [".github", "doc/*.py", "doc/*.png", "deny.toml"]

[dependencies]
egui.workspace = true

[workspace]
members = ["demo"]

[workspace.dependencies]
egui = { version = "0.33", default-features = false }
eframe = { version = "0.33", features = ["persistence"] }
